--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "contacts-app",
   "dependencies": {
-    "ember": "1.12.0",
+    "ember": "1.13",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "1.0.0-beta.18",
+    "ember-data": "1.0.0-beta.19",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
     "ember-qunit": "0.3.3",
     "ember-qunit-notifications": "0.0.7",
@@ -13,6 +13,7 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "bootstrap-sass": "~3.3.4",
-    "localforage": "~1.2.1"
+    "localforage": "~1.2.1",
+    "firebase": "^2.1.0"
   }
 }
