--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.7",
+    "ember-cli": "1.13.1",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-bootstrap-sassy": "0.0.18",
@@ -32,10 +32,9 @@
     "ember-cli-qunit": "0.3.13",
     "ember-cli-sass": "^4.0.0",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.19",
+    "ember-data": "^1.13",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-localforage-adapter": "0.7.2",
-    "emberfire": "1.4.6"
+    "emberfire": "firebase/emberfire#master"
   }
 }
